--- a/app/globals.css
+++ b/app/globals.css
@@ -88,3 +88,16 @@
         @apply click-link hover:bg-gray-300 active:bg-gray-400;
     }
 }
+
+.styled-scrollbar::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+}
+.styled-scrollbar::-webkit-scrollbar-thumb {
+    background: #cecece;
+    border-radius: 10px;
+}
+.styled-scrollbar::-webkit-scrollbar-track {
+    background: #e9e9e9;
+    padding: 3px;
+}
